[package]
name = "logtools"
version = "0.1.0"
authors = ["Yuri Geinish <wi1em@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
logentry = { git = "https://github.com/wilem82/logentry-rs.git" }
commons = { git = "https://github.com/wilem82/commons-rs.git" }
regex = "1.1.0"
chrono = { version = "0.4.15", features = ["alloc", "serde"] }
serde = { version = "1.0.115", features = ["derive"] }
clap = { version = "2.33.0", default-features = false }
either = "1.5.2"
walkdir = "2.3.1"
globset = "0.4.3"
lazy_static = "1.3.0"
termcolor = "1.0.5"
bstr = "0.2.8"
external_sort = "0.1.1"
plotters = "0.3.0"
